La till "underline" på menyknappen till den sidan man är på.

--- a/Hemsida/Advanced.html
+++ b/Hemsida/Advanced.html
@@ -12,7 +12,7 @@
             <nav>
                 <a class="menuButton" href="Home.html">Home</a>
                 <a class="menuButton" href="Basics.html">Basics</a>
-                <a class="menuButton" href="Advanced.html">Advanced</a>
+                <a class="Current" class="menuButton" href="Advanced.html">Advanced</a>
                 <a class="menuButton" href="Base_Building.html">Base Building</a>
             </nav>
         </div>
