--- a/Hemsida/Basics.html
+++ b/Hemsida/Basics.html
@@ -11,7 +11,7 @@
         <div class="menu">
             <nav>
                 <a class="menuButton" href="Home.html">Home</a>
-                <a class="menuButton" href="Basics.html">Basics</a>
+                <a class="Current" href="Basics.html">Basics</a>
                 <a class="menuButton" href="Advanced.html">Advanced</a>
                 <a class="menuButton" href="Base_Building.html">Base Building</a>
             </nav>
