--- a/Hemsida/Base_Building.html
+++ b/Hemsida/Base_Building.html
@@ -12,7 +12,7 @@
                 <a class="menuButton" href="Home.html">Home</a>
                 <a class="menuButton" href="Basics.html">Basics</a>
                 <a class="menuButton" href="Advanced.html">Advanced</a>
-                <a class="menuButton" href="Base_Building.html">Base Building</a>
+                <a class="Current" class="menuButton" href="Base_Building.html">Base Building</a>
             </nav>
         </div>
     </body>
